--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </section>
       <section id="controls">
-        <button>ATTACK</button>
+        <button @click="playerAttack">ATTACK</button>
         <button>SPECIAL ATTACK</button>
         <button>HEAL</button>
         <button>SURRENDER</button>
