--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section id="controls">
         <button @click="playerAttack">ATTACK</button>
         <button>SPECIAL ATTACK</button>
-        <button>HEAL</button>
+        <button @click="playerHeal">HEAL</button>
         <button>SURRENDER</button>
       </section>
       <section id="log" class="container">
