--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       </section>
       <section id="controls">
         <button @click="playerAttack">ATTACK</button>
-        <button>SPECIAL ATTACK</button>
+        <button @click="playerSpecialAttack" :disabled="currentRound % 3 !== 0">
+          SPECIAL ATTACK
+        </button>
         <button @click="playerHeal">HEAL</button>
         <button>SURRENDER</button>
       </section>
