--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           SPECIAL ATTACK
         </button>
         <button @click="playerHeal">HEAL</button>
-        <button>SURRENDER</button>
+        <button @click="surrender">SURRENDER</button>
       </section>
       <section id="log" class="container">
         <h2>Battle Log</h2>
