--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
           <div class="healthbar__value" :style="playerHealthBarStyle"></div>
         </div>
       </section>
-      <section id="controls">
+      <section class="container" v-if="winner">
+        <h2>| GAME OVER |</h2>
+        <h3 v-if="winner === 'player'">You Win</h3>
+        <h3 v-else-if="winner === 'monster'">You Lose</h3>
+        <h3 v-else>It's a Draw</h3>
+      </section>
+      <section id="controls" v-else-if="!winner">
         <button @click="playerAttack">ATTACK</button>
         <button @click="playerSpecialAttack" :disabled="currentRound % 3 !== 0">
           SPECIAL ATTACK
