--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h3 v-if="winner === 'player'">You Win</h3>
         <h3 v-else-if="winner === 'monster'">You Lose</h3>
         <h3 v-else>It's a Draw</h3>
+        <button @click="startGame">Start New Game</button>
       </section>
       <section id="controls" v-else-if="!winner">
         <button @click="playerAttack">ATTACK</button>
