--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3 v-else>It's a Draw</h3>
         <button @click="startGame">Start New Game</button>
       </section>
-      <section id="controls" v-else-if="!winner">
+      <section id="controls" v-else>
         <button @click="playerAttack">ATTACK</button>
         <button @click="playerSpecialAttack" :disabled="currentRound % 3 !== 0">
           SPECIAL ATTACK
@@ -47,7 +47,10 @@
       <section id="log" class="container">
         <h2>Battle Log</h2>
         <ul>
-          <li></li>
+          <li v-for="logMessage in battleLogs">
+            {{ logMessage.actionBy }} - {{ logMessage.actionType }} - {{
+            logMessage.actionValue }}
+          </li>
         </ul>
       </section>
     </div>
