styling battle log

--- a/index.html
+++ b/index.html
@@ -48,8 +48,29 @@
         <h2>Battle Log</h2>
         <ul>
           <li v-for="logMessage in battleLogs">
-            {{ logMessage.actionBy }} - {{ logMessage.actionType }} - {{
-            logMessage.actionValue }}
+            <span
+              :class="{'log--player': logMessage.actionBy === 'player', 'log--monster': logMessage.actionBy === 'monster'}"
+              >{{ logMessage.actionBy === 'player' ? 'Player' : 'Monster'
+              }}</span
+            >
+            <span v-if="logMessage.actionType === 'attack'">
+              attack and deals
+              <span class="log--damage"
+                >{{ logMessage.actionValue }}</span
+              ></span
+            >
+            <span v-else-if="logMessage.actionType === 'special-attack'">
+              use special attack and deals
+              <span class="log--damage"
+                >{{ logMessage.actionValue }}</span
+              ></span
+            >
+            <span v-else-if="logMessage.actionType === 'heal'">
+              heals himself for
+              <span class="log--heal">{{ logMessage.actionValue }}</span></span
+            >
+
+            <span v-else> surrender</span>
           </li>
         </ul>
       </section>
